chore: update readme and docker compose file

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ POSTGRES_HOST=policy-web-db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
-# USER CONFIG
-UID=1000
-GID=1001
+# GOOGLE AUTH CONFIG
+GOOGLE_CLIENT_ID=yourclientid
+GOOGLE_CLIENT_SECRET=yourclientsecret
+
+# POLICY-API
+POLICY_API_URL=http://policy-api:5000
